# dtl

./: .clang-format  .gitignore  Makefile  meson.build
src/: dtl-array.c  dtl-array.h  dtl-ast-default-visitor.cpp  dtl-ast-default-visitor.hpp  dtl-ast-defaulted-visitor.tpp  dtl-ast-find-imports.c  dtl-ast-find-imports.cpp  dtl-ast-find-imports.h  dtl-ast-find-imports.hpp  dtl-ast-node.c  dtl-ast-node.h  dtl-ast-to-ir.c  dtl-ast-to-ir.cpp  dtl-ast-to-ir.h  dtl-ast-to-ir.hpp  dtl-ast-traversal.cpp  dtl-ast-traversal.hpp  dtl-ast-visit-children.cpp  dtl-ast-visit-children.hpp  dtl-ast-visit.cpp  dtl-ast-visit.hpp  dtl-ast.c  dtl-ast.cpp  dtl-ast.h  dtl-ast.hpp  dtl-bool-array.c  dtl-bool-array.h  dtl-cmd.cpp  dtl-cmd.hpp  dtl-double-array.c  dtl-double-array.h  dtl-dtype.c  dtl-dtype.h  dtl-error.c  dtl-error.h  dtl-eval.c  dtl-eval.cpp  dtl-eval.h  dtl-eval.hpp  dtl-graph.c  (+56 more)
subprojects/: duckdb.wrap
subprojects/packagefiles/duckdb/: meson.build
tests/: dtl-test.h  dtl-test.hpp
tests/ast/: test-find-imports.c  test-find-imports.cpp
tests/bool-array/: test-not.c
tests/end-to-end/: dtl.py  test_add_expression.py  test_basic.py  test_duplicate_columns.py  test_equal.py  test_export_twice.py  test_full_outer_join.py  test_less_than.py  test_rename_columns.py  test_simple_join.py  test_split_columns.py  test_subset_columns.py
tests/experiments/: test-visitors.cpp
tests/lint/: dtl_lint.py  test_exact_includes.py  test_no_circular_includes.py  test_source_and_header_contents_match.py  test_source_and_header_orders_match.py  test_unused_symbols.py
tests/parser/: test-basic.cpp
tests/string-interner/: test-intern.c  test-reallocate.c
tests/tokenizer/: test-all-keywords.c  test-all-keywords.cpp  test-basic.c  test-basic.cpp  test-concatenated-keyword.c  test-concatenated-keyword.cpp  test-empty.c  test-empty.cpp  test-keyword.c  test-keyword.cpp  test-linebreak.c  test-linebreak.cpp
